Fix spacing tab navigation part 3

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -155,3 +155,10 @@ img {
 	--swiper-navigation-size: 20px;
 	width: 10px;
 }
+
+.swiper-slide:first-child{
+	padding-left: 1rem;
+}
+.swiper-slide:last-child{
+	padding-right: 1rem;
+}
